--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,23 @@
-<article>
-    <div class="absolute left-0">
-        <div class="flex w-screen">
-            <!-- <img class="w-1/2" src="singleCourt.jpg"> -->
-            <img class="w-1/2 scale-x-[-1]" src="facility.jpg">
-            <img class="w-1/2" src="facility.jpg">
-            <div class="absolute bg-smoked-background w-screen h-full">
-                <img class="relative left-1/2 top-1/2 h-2/3 -translate-x-1/2 -translate-y-1/2" src="logoWithBall.png">
-            </div>
-        </div>
-    </div>
+<article class="m-10">
+    <p>
+        We are a local, family owned, dedicated indoor pickleball venue. In fact, we are the largest dedicated
+        pickleball venueindoors or outdoors in central Iowa! Our facility is over 70,000 sq feet and will have 13
+        dedicated courts, dedicated practice/warm up areas and plenty of room to socialize with your friends before and
+        after play.
+    </p>
+    <br>
+    <p>
+        We can't wait for you to join us whether that be for social, competitive or open play... or maybe a league,
+        tournament or fun event!
+    </p>
+    <br>
+    <p>
+        New to pickleball? No problem, we have professional instructors that will get you up to speed during our Intro
+        to Pickleball clinics or help take your game to the next level!
+    </p>
 </article>
 
-<!-- <article class="grid xl:grid-cols-3 max-xl:grid-cols-1">
+<article class="grid xl:grid-cols-3 max-xl:grid-cols-1">
     <figure class="borderl-2 border-dinks-green w-full h-full">
 
     </figure>
@@ -28,4 +34,4 @@
     <figure class="border-l-2 border-dinks-green w-full h-full">
 
     </figure>
-</article> -->
+</article>
