--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,13 +1,17 @@
 <h1 class="text-5xl text-center my-16 font-header font-header">Professional Instruction</h1>
 
 <article class="flex max-xl:flex-col">
-    <p class="xl:w-full xl:mr-16 max-xl:mb-10 content-center">
-        We offer private 1:1 Instruction, Group Instruction, Youth training in addition to a variety of Clinics
-        beginning with Intro to Pickleball!
+    <div class="xl:w-full xl:mr-16 max-xl:mb-10 content-center">
+        <p>
+            We offer private 1:1 Instruction, Group Instruction, Youth training in addition to a variety of Clinics
+            beginning with Intro to Pickleball!
+        </p>
         <br>
-        To schedule lessons reach out to David & Bailey at <a
-            href="mailto:lanningpickleball@gmail.com">{{"lanningpickleball@gmail.com"}}</a>.
-    </p>
+        <p>
+            To schedule lessons reach out to David & Bailey at <a
+                href="mailto:lanningpickleball@gmail.com">{{"lanningpickleball@gmail.com"}}</a>.
+        </p>
+    </div>
     <div class="rounded bg-striped rotate-3 p-6 shadow-2xl bottom-0">
         <img class="w-full h-full " src="DavidAndBailey.jpg" />
     </div>
