--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,8 @@
-nav {
-    width: 100%;
-    position: fixed;
-    background-color: #d4d4d4;
-}
+// nav {
+//     width: 100%;
+//     position: fixed;
+//     background-color: #d4d4d4;
+// }
 
 .nav-button {
     color: black;
@@ -22,4 +22,8 @@ nav {
     color: #c01422;
     font-weight: 500;
     text-decoration: underline;
+}
+
+.active-link {
+    color: white !important;
 }
