--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -92,7 +92,7 @@
               <a routerLink="instruction"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 active-link">Instruction</a>
-              <a routerLink="about-us"
+              <a routerLink="about"
                 class="no-underline rounded-md px-3 py-2 text-sm font-medium text-gray-900 hover:bg-blue-900 hover:text-white visited:text-gray-900"
                 routerLinkActive="bg-blue-700 active-link">About
                 Us</a>
@@ -109,7 +109,8 @@
             </a>
 
             <a routerLink="reserve"
-              class="no-underline rounded-md px-3 py-2 text-sm font-medium bg-red-500 hover:bg-red-700 text-white hover:text-white visited:text-white">Reserve
+              class="no-underline rounded-md px-3 py-2 text-sm font-medium border-2 border-red-500 hover:border-red-700 text-red-500 hover:text-red-700 visited:text-red-700"
+              routerLinkActive=" border-red-700 bg-red-700 active-link">Reserve
               a count</a>
           </div>
         </div>
