--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <section class="relative bg-cover bg-center h-screen" style="background-image: url('facility.jpg');">
-    <div class="absolute inset-0 bg-black opacity-80"></div>
+    <div class="absolute inset-0 bg-black opacity-75"></div>
     <div class="relative z-10 flex items-center justify-center h-full">
         <div class="text-center text-white">
-            <h1 class="text-4xl md:text-6xl font-bold mb-4 mt-20">Welcome to Your New Pickleball Venue</h1>
+            <h1 class="text-4xl md:text-6xl font-bold mb-4 mt-28">Welcome to Your New Pickleball Venue</h1>
             <p class="text-lg md:text-2xl mb-8">The largest dedicated indoor pickleball venue in central Iowa.</p>
 
             <div class="mt-10 flex items-center justify-center gap-x-6">
@@ -14,28 +14,28 @@
                     more
                     <span aria-hidden="true">→</span></a>
             </div>
-            <div class="py-5 mt-10">
+            <div class="py-5 mt-14">
                 <div class="mx-auto max-w-7xl px-6 lg:px-8">
                     <dl class="grid grid-cols-1 gap-x-8 gap-y-16 text-center lg:grid-cols-3">
-                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-white p-6 rounded-lg shadow-lg">
-                            <dt class="text-base leading-7 text-gray-600">13 dedicated pickleball courts</dt>
-                            <dt class="text-base leading-7 text-gray-600">Available for open play, leagues, tournaments,
-                                clinics, and more.</dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">
+                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-gray-200 p-6 rounded-lg shadow-lg">
+                            <dt class="text-base leading-5 text-gray-600">13 dedicated pickleball courts.</dt>
+                            <dt class="text-base leading-5 text-gray-600">Available for open play, leagues, tournaments,
+                                clinics, and more!</dt>
+                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-3xl">
                                 Thirteen.
                             </dd>
                         </div>
-                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-white p-6 rounded-lg shadow-lg">
-                            <dt class="text-base leading-7 text-gray-600">True outdoor court surfaces, permanent nets
+                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-gray-200 p-6 rounded-lg shadow-lg">
+                            <dt class="text-base leading-5 text-gray-600">True outdoor court surfaces, permanent nets.
                             </dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">
+                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-3xl">
                                 Professional grade.</dd>
                         </div>
-                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-white p-6 rounded-lg shadow-lg">
-                            <dt class="text-base leading-7 text-gray-600">Forget about snow and rain!</dt>
-                            <dt class="text-base leading-7 text-gray-600">Open 6AM-midnight, 7 days/week </dt>
-                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-4xl">
-                                Open year round.</dd>
+                        <div class="mx-auto flex max-w-xs flex-col gap-y-4 bg-gray-200 p-6 rounded-lg shadow-lg">
+                            <dt class="text-base leading-5 text-gray-600">Forget about snow and rain!</dt>
+                            <dt class="text-base leading-5 text-gray-600">Open 6AM-midnight, 7 days/week.</dt>
+                            <dd class="order-first text-3xl font-semibold tracking-tight text-gray-900 sm:text-3xl">
+                                Open all year round.</dd>
                         </div>
                     </dl>
                 </div>
@@ -43,6 +43,39 @@
         </div>
     </div>
 </section>
+
+<!-- <div id="testimonial" class="container mx-auto">
+    <section class="relative isolate overflow-hidden bg-white px-6 py-24 sm:py-32 lg:px-8">
+        <div
+            class="absolute inset-0 -z-10 bg-[radial-gradient(45rem_50rem_at_top,theme(colors.indigo.100),white)] opacity-20">
+        </div>
+        <div
+            class="absolute inset-y-0 right-1/2 -z-10 mr-16 w-[200%] origin-bottom-left skew-x-[-30deg] bg-white shadow-xl shadow-indigo-600/10 ring-1 ring-indigo-50 sm:mr-28 lg:mr-0 xl:mr-16 xl:origin-center">
+        </div>
+        <div class="mx-auto max-w-2xl lg:max-w-4xl">
+            <img class="mx-auto h-12" src="https://tailwindui.com/img/logos/workcation-logo-indigo-600.svg" alt="">
+            <figure class="mt-10">
+                <blockquote class="text-center text-xl font-semibold leading-8 text-gray-900 sm:text-2xl sm:leading-9">
+                    <p>“Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo expedita voluptas culpa sapiente
+                        alias
+                        molestiae. Numquam corrupti in laborum sed rerum et corporis.”</p>
+                </blockquote>
+                <figcaption class="mt-10">
+                    <img class="mx-auto h-10 w-10 rounded-full"
+                        src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                        alt="">
+                    <div class="mt-4 flex items-center justify-center space-x-3 text-base">
+                        <div class="font-semibold text-gray-900">Judith Black</div>
+                        <svg viewBox="0 0 2 2" width="3" height="3" aria-hidden="true" class="fill-gray-900">
+                            <circle cx="1" cy="1" r="1" />
+                        </svg>
+                        <div class="text-gray-600">CEO of Workcation</div>
+                    </div>
+                </figcaption>
+            </figure>
+        </div>
+    </section>
+</div> -->
 
 <div id="about" class="container mx-auto">
     <article class="m-10 text-center">
