--- a/src/app/instruction/instruction.component.html
+++ b/src/app/instruction/instruction.component.html
@@ -1,5 +1,7 @@
-<div class="container mx-auto">
-    <h1 class="text-5xl text-center my-16 font-header">Professional Instruction</h1>
+<h1 class=" text-5xl text-center font-header">Instruction</h1>
+
+<div class="container mx-auto px-2 sm:px-6 lg:px-8">
+    <h1 class="text-5xl text-center mt-32 mb-12 font-header">Professional Instruction</h1>
 
     <article class="flex max-xl:flex-col">
         <div class="xl:w-full xl:mr-16 max-xl:mb-10 content-center">
